Implement backend login JWT redirect
